--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'be.razerstorm'
-version = '1.3'
+version = '1.4'
 
 repositories {
     mavenCentral()
@@ -32,6 +32,7 @@ dependencies {
     implementation "com.github.cryptomorin:XSeries:9.5.0"
     implementation "co.aikar:acf-bukkit:0.5.1-SNAPSHOT"
     implementation 'io.github.bananapuncher714:nbteditor:7.17.0'
+    implementation 'org.json:json:20171018'
 }
 
 def targetJavaVersion = 8
