--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,25 +11,23 @@ recipes:
     # Explanation: A = EMERALD, B = STICK
     ingredients:
       A:
-        material: "EMERALD"
+        ==: org.bukkit.inventory.ItemStack
+        v: 3465
+        type: EMERALD
       B:
-        material: "STICK"
+        ==: org.bukkit.inventory.ItemStack
+        v: 3465
+        type: STICK
 
     # The result is the item that is crafted.
     result:
-      material: "DIAMOND_PICKAXE"
-      name: "Emerald Pickaxe"
-
-  example_sword:
-    shape:
-      - "A"
-      - "A"
-      - "B"
-    ingredients:
-      A:
-        material: "EMERALD"
-      B:
-        material: "STICK"
-    result:
-      material: "DIAMOND_SWORD"
-      name: "Emerald Sword"
+      ==: org.bukkit.inventory.ItemStack
+      v: 3465
+      type: DIAMOND_PICKAXE
+      meta:
+        ==: ItemMeta
+        meta-type: UNSPECIFIC
+        display-name: '{"text":"Emerald Pickaxe"}'
+        enchants:
+          DIG_SPEED: 5
+        repair-cost: 1
