--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ plugins {
 }
 
 group = 'be.razerstorm'
-version = '1.3'
+version = '1.4'
+compileJava.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
@@ -38,8 +39,8 @@ dependencies {
 def targetJavaVersion = 8
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = 1.9
-    targetCompatibility = 1.9
+    sourceCompatibility = 14
+    targetCompatibility = 14
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
